--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,31 +55,34 @@
 </div>
 
 <div id="third" class="parallax">
-	<div class="parallax-background"></div>
+	<div id="third-parallax-background" class="parallax-background"></div>
 	<div class="container">
 		<div class="parallax-content text-center">
 			<h2 class="container_title">LoroClip은 이렇게 사용해요.</h2>
 	  	<div>
 	    	<div class="col-sm-4 col-xs-12 text-center feature_content">
 			    <%= image_tag 'pic01.png', class: "image fit featured" %>
-			    <h3 class="content-title">첫번째,
+			    <h3 class="content-title">
+			    	<p>첫번째,</p>
+			    	<p>나만의 북마크 만들기</p>
 			    </h3>
-			    <h3 class="content-title">나만의 북마크 만들기</h3>
 			    <p>내가 자주 쓰는 나만의 북마크를 만들고 수정, 관리하세요.</p>
 					<p>(현재 웹을 통해서만 관리 가능)</p>
 			  </div>
 			  <div class="col-sm-4 col-xs-12 text-center feature_content">
 			    <%= image_tag 'pic02.png', class: "image fit featured" %>
-			    <h3 class="content-title">두번째,
+			    <h3 class="content-title">
+			    	<p>두번째,</p>
+			    	<p>녹음하기</p>
 			    </h3>
-			    <h3 class="content-title">녹음하기</h3>
 			    <p>LoroClip 앱을 사용해 강의를 녹음하세요. 놓치고 싶지 않은 부분이 있을 땐 단 한번의 터치로 북마크를 남길 수 있습니다.</p>
 			  </div>
 			  <div class="col-sm-4 col-xs-12 text-center feature_content">
 			    <%= image_tag 'pic03.png', class: "image fit featured" %>
-			    <h3 class="content-title">세번째,
-			    </h3>
-					<h3 class="content-title">어디서든 다시 듣기</h3>
+			    <h3 class="content-title">
+			    	<p>세번째,</p>
+						<p>어디서든 다시 듣기</p>
+					</h3>
 					<p>녹음파일과 북마크는 계정과 연결되어 보관되므로 웹/모바일을 가리지 않고 언제 어디서든 쉽게 이용 가능합니다.</p>
 			  </div>
 		  </div>
