Delete all share related words. fix #130

--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -16,7 +16,7 @@
         </div>
         <div class="record-edit-btn-container">
           <div class="record-edit-btn" data-record="<%= record.id %>" data-action="share" data-record-edit data-toggle="modal" data-target="#share-record-modal">
-            <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
           </div>
           <div class="record-edit-btn" data-record="<%= record.id %>" data-action="edit" data-record-edit data-toggle="modal" data-target="#edit-record-modal">
             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
