--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -29,7 +29,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="share-record-modal-label">Share Record</h4>
+        <h4 class="modal-title" id="share-record-modal-label">Access via link</h4>
       </div>
       <div id="share-record-modal-content">
       </div>
