--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -6,7 +6,7 @@
           <% next %>
         <% end %>
         <div class="record-created-at">
-          <%= record.created_at.to_s(:db) %>
+          <%= record.created_at.localtime.to_s(:db) %>
         </div>
         <div>
           <h4 class="record-title"><%= record.title %></h4>
