--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,85 +1,95 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>LoroClip</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application/main', 'data-turbolinks-track' => true %>
-  <%= content_for(:header) %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<header id="wrapper" class="toggled">
-  <nav id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a>LoroClip</a>
-        </li>
-        <li class="sidebar-item">
-          <%= link_to new_record_path do %>
-            <span class="glyphicon glyphicon-plus sidebar-icon" aria-hidden="true"></span>
-            New Record
-          <% end %>
-        </li>
-        <li class="sidebar-item">
-          <%= link_to records_path do %>
-            <span class="glyphicon glyphicon-list-alt sidebar-icon" aria-hidden="true"></span>
-            My Record List
-          <% end %>
-        </li>
-        <li class="sidebar-item">
-          <%= link_to bookmarks_path do %>
-            <span class="glyphicon glyphicon-bookmark sidebar-icon" aria-hidden="true"></span>
-            My Bookmark List
-          <% end %>
-        </li>
-        <li class="sidebar-item sidebar-item-footer">
-          <%= link_to privacy_policy_path do %>
-            <span class="glyphicon glyphicon-info-sign sidebar-icon" aria-hidden="true"></span>
-            Privacy Policy
-          <% end %>
-        </li>
-    </ul>
-  </nav>
-  <nav class="navbar navbar-default navbar-fixed-top nav-custom">
-    <div class="container">
-    <!-- <div class="container"> -->
-      <div class="navbar-header">
-        <a id="menu-toggle" class="navbar-brand">
-          <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-        </a>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-center navbar-icon">
-          <%= content_for(:navbar_button) %>
+  <head>
+    <title>LoroClip</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application/main', 'data-turbolinks-track' => true %>
+    <%= content_for(:header) %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-64100129-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+    <header id="wrapper" class="toggled">
+      <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+                <a>LoroClip</a>
+            </li>
+            <li class="sidebar-item">
+              <%= link_to new_record_path do %>
+                <span class="glyphicon glyphicon-plus sidebar-icon" aria-hidden="true"></span>
+                New Record
+              <% end %>
+            </li>
+            <li class="sidebar-item">
+              <%= link_to records_path do %>
+                <span class="glyphicon glyphicon-list-alt sidebar-icon" aria-hidden="true"></span>
+                My Record List
+              <% end %>
+            </li>
+            <li class="sidebar-item">
+              <%= link_to bookmarks_path do %>
+                <span class="glyphicon glyphicon-bookmark sidebar-icon" aria-hidden="true"></span>
+                My Bookmark List
+              <% end %>
+            </li>
+            <li class="sidebar-item sidebar-item-footer">
+              <%= link_to privacy_policy_path do %>
+                <span class="glyphicon glyphicon-info-sign sidebar-icon" aria-hidden="true"></span>
+                Privacy Policy
+              <% end %>
+            </li>
         </ul>
-        <ul class="nav navbar-nav navbar-right navbar-icon">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <button class="btn btn-link btn-lg">
-                <span>
-                  <i class="glyphicon glyphicon-cog"></i>
-                </span>
-              </button>
+      </nav>
+      <nav class="navbar navbar-default navbar-fixed-top nav-custom">
+        <div class="container">
+        <!-- <div class="container"> -->
+          <div class="navbar-header">
+            <a id="menu-toggle" class="navbar-brand">
+              <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
             </a>
-            <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "Sign Out", signout_path %></li>
+          </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-center navbar-icon">
+              <%= content_for(:navbar_button) %>
             </ul>
-          </li>
-        <ul>
-      </div>
+            <ul class="nav navbar-nav navbar-right navbar-icon">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                  <button class="btn btn-link btn-lg">
+                    <span>
+                      <i class="glyphicon glyphicon-cog"></i>
+                    </span>
+                  </button>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to "Sign Out", signout_path %></li>
+                </ul>
+              </li>
+            <ul>
+          </div>
+        </div>
+
+      </nav>
+      <div id="dim" class="modal-backdrop fade in" style="display: none;"></div>
+
+        <!-- Audio Control Button -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+        </div><!-- /.navbar-collapse -->
+    </header>
+    <div class="main-container">
+      <%= yield %>
     </div>
-
-  </nav>
-  <div id="dim" class="modal-backdrop fade in" style="display: none;"></div>
-
-    <!-- Audio Control Button -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-    </div><!-- /.navbar-collapse -->
-</header>
-  <div class="main-container">
-    <%= yield %>
-  </div>
-</body>
+  </body>
 </html>
