--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
 	<div class="parallax-background"></div>
 	<div class="parallax-content text-center">
   	<div>
-    	<h2 class="title">강의 콘텐츠 하이라이트 플랫폼</h2>
+    	<h2 class="title">의대생 강의 녹음 구간 북마크 서비스</h2>
 			<p class="content">강의를 녹음하는 도중 중요한 부분들을 원터치로 기록하세요.</p>
 			<p class="content">LoroClip이 당신의 북마크를 통해 가장 효율적으로, 언제 어디서나 학습할 수 있도록 도와줍니다.</p>
 	  </div>
